[package]
name = "rustt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="spin_lock"
path="./src/atomic/Spin_lock.rs"

[[bin]]
name="channel"
path="./src/atomic/channel.rs"

[[bin]]
name="arc"
path="./src/atomic/arc.rs"

[[bin]]
name="mut"
path="./src/atomic/mut.rs"

[dependencies]
atomic-wait = "1.1.0"
